flux/apps/local/ingress/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: ingress
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: server:latest
          imagePullPolicy: Never
          resources: {}
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /liveness
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 3
      restartPolicy: Always
