flux/apps/local/ingress/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: ingress
spec:
  selector:
    app: server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
