flux/apps/local/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server
  namespace: ingress
spec:
  parentRefs:
    - name: ingress
      namespace: istio-system
  hostnames:
    - "echo.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: server
          port: 8080
